--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Calculadora de medicamentos GTA5RP</title>
     <link rel="stylesheet" href="style.css/style.css">
     <script src="/CalculadoraGTA/script.js/script.js" type="text/javascript" defer></script>
 
